# declarative-systems

./: .travis.yml  LICENSE  README.md  declarative-systems.cabal  stack.yaml
src/System/: Declarative.hs
src/System/Declarative/: Observe.hs
src/System/Declarative/Entities/: Environment.hs  File.hs  Process.hs
test/: Spec.hs
