name:                declarative-systems
version:             0.1.0.0
synopsis:            Declarative systems programming
description:         Please see README.md
homepage:            https://github.com/githubuser/declarative-systems#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          Marco Zocca, zocca marco gmail
copyright:           2016 Marco Zocca
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable declarative-systems-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , declarative-systems
  default-language:    Haskell2010

test-suite declarative-systems-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , declarative-systems
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ocramz/declarative-systems
